fix: remove ZGenerational flag and Quartz BeanPostProcessor warning